objects/Integration_Setting__mdt.object
<CustomObject>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>The API Key for use in authenticating Microservices access.</description>
        <inlineHelpText>The API Key for use in authenticating Microservices access.</inlineHelpText>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <description>The Endpoint for the defined object&apos;s MicroService</description>
        <inlineHelpText>The Endpoint for the defined object&apos;s MicroService</inlineHelpText>
        <label>End Point</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <description>MDM Source ID for Salesforce</description>
        <inlineHelpText>This value (4) is expected by MDM to identify Salesforce as an authorized source when sending any request</inlineHelpText>
        <label>Source ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>This identifies the type source/target environment set (sandbox, production)</description>
        <inlineHelpText>Determines whether the connection is from/to a Sandbox or a Production environment</inlineHelpText>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                    <default>true</default>
                    <label>Sandbox</label>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>API Name of the SFDC object for which the MDM create/update request is sent</description>
        <inlineHelpText>This custom metadata record is used to send MDM create/update request for the SFDC object specified here</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Email_Address__c</fullName>
        <description>The email address used to send notification of integration issues. This may result in a case being created if the email is related to Salesforce&apos;s Email-to-Case feature</description>
        <inlineHelpText>The email address used to send notification of integration issues. This may result in a case being created if the email is related to Salesforce&apos;s Email-to-Case feature</inlineHelpText>
        <label>HelpDesk Email Address</label>
        <type>Email</type>
    </fields>
</CustomObject>